feat: add findall route
