# docs/swagger.json
@@ -4,7 +4,26 @@
         "contact": {}
     },
     "paths": {
-        "/users/{id}": {
+        "/admin/users": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Retrieves users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/user.User"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/users/{id}": {
             "get": {
                 "tags": [
                     "users"
